--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -33,30 +33,30 @@
         </div>
         <% end %>
       <% end %>
+      <%  %>
     </div>
-    <div class="summary">
-      <h2>Summary</h2>
-      <div class="checkout-detail">
-        <p><strong>Subtotal:</strong></p>
-        <div class="subtotal-cart">
-          <span class="subtotal"><%= @total %></span>/€
+    <div>
+      <div class="summary">
+        <h2 style="margin-bottom: 48px">Summary</h2>
+        <% @order.order_products.each do |order_product| %>
+          <label class="checkout-detail" data-order-product-id="<%= order_product.id %>">
+            <p class='detail-name'><%= order_product.product.name %>:</p> 
+            <p class='detail-price'>€<%= order_product.product.price * order_product.quantity %></p>
+          </label>
+        <% end %>
+        <div class="checkout-detail">
+          <p><strong>Total:</strong></p>
+          <div class="subtotal-cart">
+            <span class="total_and_shipment">€<%= @total_and_shipment %></span>
+          </div>
         </div>
+        <%= link_to checkout_path(@order), method: :patch, style:'margin:0px auto;' do %>
+          <button class="btn-f">Checkout</button>
+        <% end %>
       </div>
-      <div class="checkout-detail">
-        <p><strong>Shipping cost:</strong></p>
-        <div class="subtotal-cart">
-          <span class="shipping"><%= 50 %></span>/€
-        </div>
-      </div>
-      <div class="checkout-detail">
-        <p><strong>Total:</strong></p>
-        <div class="subtotal-cart">
-          <span class="total_and_shipment"><%= @total_and_shipment %></span>/€
-        </div>
-      </div>
-      <%= link_to checkout_path(@order), method: :patch, style:'margin:0px auto;' do %>
-        <button class="btn-f">Checkout</button>
-      <% end %>
     </div>
   </div>
 </div>
+
+
+
