--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,7 @@
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    
+
     <div class="modal-content">
 
         <div class="product-box">
@@ -17,16 +17,15 @@
             <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <img class=" profile-avatar avatar-m-bordered" alt="avatar-m-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> 
+          <img class=" profile-avatar avatar-m-bordered" alt="avatar-m-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
           <div class="basic-infos">
               <div class="title-rating">
                   <h3><%=@product.name %></h3>
               </div>
               <div class="price">
                   <h3>⭐️️️️️️️⭐️⭐️⭐️</h3>
-                  <h3><%=@product.rating %></h3>
-    
-                  <h3>€<%=@product.price %>/kg</h3>
+
+                  <h3>$<%=@product.price %>/kg</h3>
               </div>
           </div>
           <div class="description">
@@ -34,7 +33,7 @@
               <p>An apple is a sweet, edible fruit produced by an apple tree (Malus pumila). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</p>
           </div>
           <div class="add-to-cart">
-             <button href="#" class="btn-f btn-m">Add to cart</button>        
+             <button href="#" class="btn-f btn-m">Add to cart</button>
           </div>
         </div>
       </div>
