--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -10,7 +10,7 @@
             <div class="name-quantity">
               <h2><%= order_product.product.name %></h2>
               <div class = "price-f">
-                <span>Total: €</span><p class = "total-price"><%= order_product.product.price * order_product.quantity %></p>
+                <span>Total: $</span><p class = "total-price"><%= order_product.product.price * order_product.quantity %></p>
               </div>
             </div>
             <div class="quantities">
@@ -23,7 +23,7 @@
               <% end %>
             </div>
             <div class= "price-each">
-              <span>Each: €</span><p class="price" style="display:inline"> <%= order_product.product.price %></p>
+              <span>Each: $</span><p class="price" style="display:inline"> <%= order_product.product.price %></p>
             </div>
             <p>Seller: <%= link_to farmer_path(order_product.product.farmer), class:'profile-link hvr-icon-wobble-horizontal', style:'margin-bottom: 3px;' do %>
                 <%= order_product.product.farmer.name %><i class="fa fa-arrow-right hvr-icon" style="margin-left: 8px;"></i>
@@ -40,14 +40,14 @@
         <h2 style="margin-bottom: 48px">Summary</h2>
         <% @order.order_products.each do |order_product| %>
           <label class="checkout-detail" data-order-product-id="<%= order_product.id %>">
-            <p class='detail-name'><%= order_product.product.name %>:</p> 
-            <p class='detail-price'>€<%= order_product.product.price * order_product.quantity %></p>
+            <p class='detail-name'><%= order_product.product.name %>:</p>
+            <p class='detail-price'>$<%= order_product.product.price * order_product.quantity %></p>
           </label>
         <% end %>
         <div class="checkout-detail">
           <p><strong>Total:</strong></p>
           <div class="subtotal-cart">
-            <span class="total_and_shipment">€<%= @total_and_shipment %></span>
+            <span class="total_and_shipment">$<%= @total_and_shipment %></span>
           </div>
         </div>
         <%= link_to checkout_path(@order), method: :patch, style:'margin:0px auto;' do %>
