landing page bug fixes, and minor changes to order pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
         <ul>
             <li> <%= link_to "Sign Up", new_user_registration_path, style:'float:right; color:white; text-decoration: none'%></li>
             <li> <%= link_to "Sign In", new_user_session_path, style:'float:right; color:white; text-decoration: none'%></li>
-            <li> <%= link_to "About", new_user_session_path, style:'float:right; color:white; text-decoration: none'%></li>
+            <li> <%= link_to "About", src='#how-to', style:'float:right; color:white; text-decoration: none'%></li>
         </ul>
     </div>
   </div>
@@ -77,21 +77,21 @@
       </div>
       <div class="carousel-item active">
         <div class="farmer">
-          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
           <div class="farmer-details">
-            <h2>Billy Joel</h2>
-            <h4>Barcelona, Spain</h4>
-            <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+            <h2>Luke Skywalker</h2>
+            <h4>Madrid, Spain</h4>
+            <p>I have been a farmer for over 50. I love my job and love the feeling of knowing I provide produce to people around the world. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="farmer">
-          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/Eschults" />
           <div class="farmer-details">
-            <h2>Billy Joel</h2>
-            <h4>Barcelona, Spain</h4>
-            <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+            <h2>Phil Jackson</h2>
+            <h4>Girona, Spain</h4>
+            <p>After coaching the Bulls and Lakers to several championships, I decided to move to Girona and start my own farm. I have been doing this for over 10 years now and love it!</p>
           </div>
         </div>
       </div>
