--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -15,6 +15,12 @@
     margin-top: 50px;
   }
 
+  button.stripe-button-el,
+  button.stripe-button-el>span {
+    background-color: #384D48 !important;
+    background-image: none;
+}
+
 
 </style>
 
