--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -98,6 +98,7 @@
   justify-content: space-around;
 }
 .step-1{
+  width: 30%;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -119,7 +120,7 @@
 }
 
 .step-1 p{
-  width: 200px;
+  width: 100%;
   text-align: center;
 }
 
