--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -10,7 +10,7 @@
             <div class="name-quantity">
               <h2><%= order_product.product.name %></h2>
               <div class = "price-f">
-                <span>Total: €</span><p class = "total-price"><%= order_product.product.price * order_product.quantity %></p>
+                <span>Total: $</span><p class = "total-price"><%= order_product.product.price * order_product.quantity %></p>
               </div>
             </div>
             <div class="quantities">
@@ -23,9 +23,9 @@
               <% end %>
             </div>
             <div class= "price-each">
-              <span>Each: €</span><p class="price" style="display:inline"> <%= order_product.product.price %></p>
+              <span>Per <%= order_product.product.unit_of_measurement %>: $</span><p class="price" style="display:inline"><%= order_product.product.price %></p>
             </div>
-            <p>Seller: <%= link_to farmer_path(order_product.product.farmer), class:'profile-link hvr-icon-wobble-horizontal', style:'margin-bottom: 3px;' do %>
+            <p>Farmer: <%= link_to farmer_path(order_product.product.farmer), class:'profile-link hvr-icon-wobble-horizontal', style:'margin-bottom: 3px;' do %>
                 <%= order_product.product.farmer.name %><i class="fa fa-arrow-right hvr-icon" style="margin-left: 8px;"></i>
               <% end %>
             </p>
@@ -39,19 +39,19 @@
       <div class="checkout-detail">
         <p><strong>Subtotal:</strong></p>
         <div class="subtotal-cart">
-          <span class="subtotal"><%= @total %></span>/€
+          <span class="subtotal">$<%= @total %></span>
         </div>
       </div>
       <div class="checkout-detail">
         <p><strong>Shipping cost:</strong></p>
         <div class="subtotal-cart">
-          <span class="shipping"><%= 50 %></span>/€
+          <span class="shipping">$<%= 50 %></span>
         </div>
       </div>
       <div class="checkout-detail">
         <p><strong>Total:</strong></p>
         <div class="subtotal-cart">
-          <span class="total_and_shipment"><%= @total_and_shipment %></span>/€
+          <span class="total_and_shipment">$<%= @total_and_shipment %></span>
         </div>
       </div>
       <%= link_to checkout_path(@order), method: :patch, style:'margin:0px auto;' do %>
