add rating filter functionality

--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -62,6 +62,7 @@
                 <%= f.input :text, label: "Search", required: false, placeholder: "Product or category", input_html: { value: params[:query].try(:[], :text)}, wrapper_html: { class: 'input-price' }%>
                 <%= f.input :price, label: "Price", required: false, collection: ['-', 'Ascending', 'Descending'], selected: params[:query].try(:[], :price), wrapper_html: { class: 'input-price' }  %>
                 <%= f.input :distance, label: "Distance", required: false, collection: ['-', '< 5km', '< 10km', '< 20km', '< 50km'], selected: params[:query].try(:[], :distance)  %>
+                <%= f.input :rating, label: "Rating", required: false, collection: ['-', '> 1', '> 2', '> 3', '> 4'], selected: params[:query].try(:[], :rating)  %>
                 <%= f.input :category, as: :hidden, input_html: { value: params[:query].try(:[], :category) } %>
               </div>
               <div>
