added notifications and summary total added$ signs

--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -32,6 +32,18 @@
     color: white;
 }
 
+.input-search-f {
+    width: 240px
+}
+
+.input-price-f {
+    width: 180px;
+}
+
+.input-distance-f {
+    width: 180px;
+
+}
 .product-name {
   text-decoration: none;
   color: black;
