--- a/app/assets/stylesheets/components/_simple_form.scss
+++ b/app/assets/stylesheets/components/_simple_form.scss
@@ -1,7 +1,7 @@
 .filter {
   width: 1094px;
   justify-content: space-between;
-  align-items: center
+  align-items: flex-end;
 }
 
 .filter-input > * {
