--- a/app/views/order_products/decrement.js.erb
+++ b/app/views/order_products/decrement.js.erb
@@ -17,9 +17,9 @@ function updateElement() {
   let total = 0
   cards.forEach((card) => {
     const totalPrice = card.querySelector('.total-price')
-    console.log(totalPrice)
     total = total + parseInt(totalPrice.innerHTML, 10)
+
   })
-  subtotal_shipment.innerHTML = total
+  subtotal_shipment.innerHTML = `$${total.toFixed(2)}`
 }
 updateElement()
