--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -72,18 +72,25 @@
         </div>
         <div class='cards-container row'>
             <% @products.each do |product| %>
-            <div class="col-lg-4">
-                <div class='product-card'>
+            <div class="col-lg-4 product-card-parent">
                 <% if current_user %>
+                    <% if current_user.role == "Restaurant" %>
+                        <%= link_to product_order_products_path(product), method: :post, class: "add-b-f" , remote: true, style: 'font-size: 30px; color: white;' do %>
+                            <ion-icon name="add-circle-outline"></ion-icon>
+                        <% end %>
+                    <% end %>
+                <% end %>
+
+                <div class='product-card'>
+
+            
+                    <% if current_user %>
                     <% if current_user.role == "Restaurant" %>
                          <a href="#" data-featherlight="#mylightbox-<%=product.id %>"> 
                     <% end %>
                     <% if current_user.role == "Restaurant" %>
                         <div class='card-img-restaurant'
                             style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
-                            <%= link_to product_order_products_path(product), method: :post, class: "add-b" , style: 'font-size: 30px; color: white' do %>
-                                <ion-icon name="add-circle-outline"></ion-icon>
-                                <% end %>
                         </div>
                     
                     <% elsif current_user.role == "Farmer" && Farmer.find(params[:id]) == current_user.farmer %>
