Minor frontend adj and new js file to update

--- a/app/assets/stylesheets/pages/_my_active_order.scss
+++ b/app/assets/stylesheets/pages/_my_active_order.scss
@@ -45,14 +45,14 @@
   align-items: center;
 }
 .remove-card {
-  font-size: 27px; 
+  font-size: 27px;
   color: rgb(236, 56, 56);
   transition-duration: 0.3s;
   transition-property: transform;
 }
 
 .remove-card:hover {
-  font-size: 27px; 
+  font-size: 27px;
   color: rgb(236, 56, 56);
 }
 
@@ -117,11 +117,11 @@
 
 .profile-link{
   text-decoration: none;
-  color: #33903f;
+  color: #384D48;
 }
 .profile-link:hover{
   text-decoration: none;
-  color: #33903f;
+  color: #384D48;
 }
 .remove {
   position: absolute;
