--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -27,7 +27,8 @@
 </style>
 
 
-<h1 style='text-align: center; margin-top: 40px'>Order Details</h1>
+<h2 style='margin-top: 50px;'>Order Details</h2>
+<br>
 <p style='text-align: center'>Ordered on: <%= @order.created_at.strftime('%m/%d/%Y') %> <p>
 <p style='text-align: center'>Status: <%= @order.status %></p>
 
