--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -59,10 +59,10 @@
             <%= simple_form_for :query, url: products_path, method: :get do |f| %>
             <div class="d-flex filter">
               <div class="filter-input d-flex mr-4">
-                <%= f.input :text, label: "Search", required: false, placeholder: "Product or category", input_html: { value: params[:query].try(:[], :text)}, wrapper_html: { class: 'input-price' }%>
-                <%= f.input :price, label: "Price", required: false, collection: ['-', 'Ascending', 'Descending'], selected: params[:query].try(:[], :price), wrapper_html: { class: 'input-price' }  %>
-                <%= f.input :distance, label: "Distance", required: false, collection: ['-', '< 5km', '< 10km', '< 20km', '< 50km'], selected: params[:query].try(:[], :distance)  %>
-                <%= f.input :rating, label: "Rating", required: false, collection: ['-', '> 1', '> 2', '> 3', '> 4'], selected: params[:query].try(:[], :rating)  %>
+                <%= f.input :text, label: "Search", required: false, placeholder: "Product or category", input_html: { value: params[:query].try(:[], :text)}, wrapper_html: { class: 'input-search-f' }%>
+                <%= f.input :price, label: "Price", required: false, collection: ['-', 'Ascending', 'Descending'], selected: params[:query].try(:[], :price), wrapper_html: { class: 'input-price-f' }  %>
+                <%= f.input :distance, label: "Distance", required: false, collection: ['-', '< 5km', '< 10km', '< 20km', '< 50km'], selected: params[:query].try(:[], :distance), wrapper_html: { class: 'input-distance-f' }  %>
+                <%= f.input :rating, label: "Rating", required: false, collection: ['-', '> 1', '> 2', '> 3', '> 4'], selected: params[:query].try(:[], :rating), wrapper_html: { class: 'input-distance-f' }  %>
                 <%= f.input :category, as: :hidden, input_html: { value: params[:query].try(:[], :category) } %>
               </div>
               <div>
@@ -86,13 +86,13 @@
 
                     <% if current_user %>
                     <% if current_user.role == "Restaurant" %>
-                         <a href="#" data-featherlight="#mylightbox-<%=product.id %>"> 
+                         <a href="#" data-featherlight="#mylightbox-<%=product.id %>">
                     <% end %>
                     <% if current_user.role == "Restaurant" %>
                         <div class='card-img-restaurant'
                             style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
                         </div>
-                    
+
                     <% elsif current_user.role == "Farmer" && Farmer.find(params[:id]) == current_user.farmer %>
                         <div class='card-img-farmer'
                             style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
@@ -110,7 +110,7 @@
                         </div>
                     <% end %>
                     <% end %>
-                    
+
                     <div class='card-details'>
                         <div class='rows'>
                             <h4><%= product.name %></h4>
@@ -223,4 +223,4 @@
                                 <%# <ion-icon name="close" class="hvr-icon"></ion-icon> %>
                             <%# end %>
                         <%# end %>
-                    <%# </div> %> 
+                    <%# </div> %>
