--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -24,19 +24,19 @@
 
 </style>
 
-<h1>Payment for Order ID: <%= @order.id %></h1>
+<h2 style='margin-top: 50px;'>Payment for Order ID: <%= @order.id %></h2>
 
 <div class="order-form">
   <%= form_tag order_payments_path(@order) do %>
     <% @order.order_products.each do |order_product| %>
       <label class="amount">
-        <p><%= order_product.product.name %></p> 
-        <p>$<%= order_product.product.price %></p>
+        <p><%= order_product.product.name %></p>
+        <p>$<%= order_product.product.price * order_product.quantity %></p>
       </label>
     <% end %>
 
     <h3>Total amount: <%= humanized_money_with_symbol(@order.total_price) %></h3>
- 
+
     <div class=strip-btn>
       <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
@@ -45,7 +45,7 @@
         data-description="Order <%= @order.id %>"
         data-amount="<%= @order.total_price_cents %>"
         data-currency="<%= @order.total_price.currency %>">
-      </script>    
+      </script>
     </div>
   <% end %>
 </div>
