optimize farmer#show

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -84,12 +84,14 @@
     padding: 4px 10px;
     h4 {
         margin: 0;
+        color: black;
+        text-decoration: none;
     }
-
     p {
         margin: 0;
     }
 }
+
 
 .rows {
     display: flex;
