--- a/app/assets/stylesheets/farmers/_show.scss
+++ b/app/assets/stylesheets/farmers/_show.scss
@@ -35,8 +35,8 @@
 
 #map {
   
-  width: 91%;
+  width: 99%;
   height: 600px;
-  margin: 0 auto;
+  margin: -1px 0 -2px -1px;
   box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
 }
