--- a/app/views/orders/_summary.html.erb
+++ b/app/views/orders/_summary.html.erb
@@ -10,7 +10,7 @@
   <div class="checkout-detail mb-4">
     <p><strong>Total:</strong></p>
     <div class="subtotal-cart">
-      <span class="total_and_shipment">$<%= total %></span>
+      <span class="total_and_shipment"><strong> $<%= total %></strong></span>
     </div>
   </div>
   <%= link_to checkout_path(order), method: :patch, style:'margin:0px auto;' do %>
