--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -73,11 +73,11 @@
 }
 
 .product-name {
-    color:black;  
+    color:black;
 }
 
 .link-name:hover {
-    text-decoration: none;  
+    text-decoration: none;
     color:green;
 }
 
@@ -104,18 +104,18 @@
     box-shadow: 0 10px 40px rgba(0,0,0,0.2);
     position: relative;
   }
-  
+
   .profile-avatar {
     position: absolute;
     left: 400px;
     top: 331px;
   }
-  
+
   .basic-infos {
     padding: 50px;
     height: 577px;
   }
-  
+
   .title-rating {
     margin-bottom: 10px;
   }
@@ -123,18 +123,17 @@
   .title-rating h3 {
     margin-top: 10px;
   }
-  
+
   .price {
     display: flex;
     justify-content: space-between;
   }
-  
-  
+
+
   .add-to-cart {
-    padding-bottom: 0px;
-    bottom: 25px;
-    left: 32.5%;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
   }
 
 //media queries
