--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -149,7 +149,11 @@
                             <p><%=product.farmer.description %></p>
                         </div>
                         <div class="add-to-cart">
-                            <button href="#" class="btn-f btn-m">Add to cart</button>
+                          <% if current_user.role == "Restaurant" %>
+                            <%= link_to product_order_products_path(product), method: :post, remote: true do %>
+                                <button href="#" class="btn-f-d btn-m">Add to cart</button>
+                            <% end %>
+                          <% end %>
                         </div>
                 </div>
             </div>
