Link product card, btn farmer show

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -10,6 +10,13 @@
     position: relative;
 }
 
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 
 .card-img-restaurant {
     width: 100%;
