--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,6 +20,7 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+  object-fit: cover;
 }
 
 .avatar-m-bordered {
@@ -27,6 +28,7 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 2px solid;
+  object-fit: cover;
 }
 
 .avatar-l-bordered {
@@ -34,6 +36,7 @@
   border-radius: 50%;
   box-shadow: 0 3px 3px rgba(0,0,0,0.2);
   border: white 3px solid;
+  object-fit: cover;
 }
 
 
@@ -42,4 +45,5 @@
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+  object-fit: cover;
 }
