--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -35,11 +35,11 @@
 <table>
   <thead>
     <tr>
-      <td style='text-align: left; width: 500px; font-weight: bold; border-left: 1px solid #384D48;'>Item(s) Purchased</td>
-      <td style='text-align: center; width: 200px; font-weight: bold'>Farmer</td>
+      <td style='text-align: left; width: 450px; font-weight: bold; border-left: 1px solid #384D48;'>Item(s) Purchased</td>
+      <td style='text-align: center; width: 250px; font-weight: bold'>Farmer</td>
       <td style='text-align: center; font-weight: bold'>Price</td>
       <td style='text-align: center; font-weight: bold'>Quantity</td>
-      <td style='text-align: right; font-weight: bold; border-right: 1px solid #384D48;'>Total</td>
+      <td style='text-align: center; font-weight: bold; border-right: 1px solid #384D48;'>Total</td>
     </tr>
   </thead>
   <tbody>
@@ -47,9 +47,9 @@
     <tr>
       <td style='text-align: left'><%= product.product.name %></td>
       <td style='text-align: center'> <%= link_to product.product.farmer.name, farmer_path(product.product.farmer), style: 'color: #384D48' %></td>
-      <td style='text-align: center'>$<%= product.total_price %></td>
+      <td style='text-align: center'>$<%= product.total_price / product.quantity %></td>
       <td style='text-align: center'> <%= product.quantity %></td>
-      <td style='text-align: right'>$<%= product.total_price * product.quantity %></td>
+      <td style='text-align: right'>$<%= product.total_price %></td>
     </tr>
     <% end %>
   </tbody>
