--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -140,17 +140,12 @@
 // Farmer profile
 
 .farmer {
-  width: 1200px;
+  width: 85vw;
   margin: 80px auto;
   display: flex;
   padding: 80px;
   box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
 
-}
-
-.farmer img {
-  margin-right: 40px;
-  width: 206px;
 }
 
 .farmer-details {
@@ -210,5 +205,19 @@
   .search-form-control {
     width: 100%;
   }
+
+  .farmer {
+    display: grid;
+  }
+
+  .farmer img {
+    margin: 0 auto;
+  }
+
+  .farmer-details {
+    margin-top: 10px;
+  }
+
+  
 }
 
