--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Forgot your password?</h2>
-
+<h2 style='margin-top: 20px;'>Forgot your password?</h2>
+<div style='width: 85vw; margin: 20px auto'>
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -11,8 +11,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", class: "btn-f-d btn-l " %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
