--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<div style='width: 85vw; margin: 0 auto'>
 <div class="container-f product-show">
     <div class='category', style="margin-top: 160px">
         <p><%= link_to "Clear filter", products_path, class: "cat-item", style:"font-weight: lighter" %></p>
@@ -27,19 +28,13 @@
         </div>
 
         <div class='responsive-dropdown' style='width: 100%'>
-            <select style='width: 49.5%'>
+            <p><%= link_to "Clear filter", products_path, class: "cat-item", style:"font-weight: lighter" %></p>
+            <select style='width: 85vw'>
                 <option>Filter by product type</option>
-                <option>Fruits</option>
-                <option>Veggies</option>
-                <option>Meat</option>
-                <option>Dairy</option>
-            </select>
-            <select style='width: 49.5%; float:right'>
-                <option>Filter by product type</option>
-                <option>Fruits</option>
-                <option>Veggies</option>
-                <option>Meat</option>
-                <option>Dairy</option>
+                <option><%= link_to "Fruits", products_path(query: {category: "Fruits"}), class: "cat-item #{'green-underline bold' if selected_category?("Fruits") }" %></option>
+                <option><%= link_to "Veggies", products_path(query: {category: "Vegetables"}), class: "cat-item #{'green-underline bold' if selected_category?("Vegetables") }" %></option>
+                <option><%= link_to "Meat", products_path(query: {category: "Meat"}), class: "cat-item #{'green-underline bold' if selected_category?("Meat") }" %></option>
+                <option><%= link_to "Dairy", products_path(query: {category: "Dairy"}), class: "cat-item #{'green-underline bold' if selected_category?("Dairy") }" %></option>
             </select>
         </div>
 
@@ -164,4 +159,4 @@
 
     </div>
 </div>
-
+</div>
