--- a/app/views/farmers/new.html.erb
+++ b/app/views/farmers/new.html.erb
@@ -1,6 +1,6 @@
+<div style='width: 85vw; margin: 20px auto'>
 <div class="container">
-  <div class="row justify-content-center ">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+  
       <div class="form-login">
         <h2 style="text-align:center">Your farm</h2>
 
@@ -18,7 +18,6 @@
             <%= f.button :submit, "Create farm", class: "btn-f-d btn-l" %>
           </div>
         <% end %>
-      </div>
-    </div>
+  </div>
   </div>
 </div>
