--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,8 +1,7 @@
-<div class="container">
-  <div class="row justify-content-center ">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+<div style='width: 85vw; margin: 20px auto'>
+<div class="container">    
       <div class="form-login">
-
+        
          <h2 style="text-align:center">Your restaurant</h2>
 
           <%= simple_form_for(@restaurant) do |f| %>
@@ -15,8 +14,7 @@
             </div>
           <% end %>
      </div>
-    </div>
-  </div>
+    
+  
 </div>
-
-
+</div>
